[FIX] Fixed the clipping of the calendar month name on the create-event page
- Changed the font family of the overall body element so that the font
  being used inside the calendar datetime picker would then be changed as
  well; specifically to a font family that doesn't clip out part of the
  month's name.
- The previous fix worked for Firefox only whereas this fix seems to work
  on Firefox, Safari, and Chrome.

--- a/ACM_General/events/static/events/css/create-event.css
+++ b/ACM_General/events/static/events/css/create-event.css
@@ -1,8 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Noto+Sans');
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400');
 
 body, html {
-    font-family: 'Noto Sans', sans-serif;
+    font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
     background-color: white;
